<resources>
    <string name="app_name">EasyInvest</string>

    --- Strings InvestorActivity ---
    <string name="Resultado_Da_simulação">Resultado da simulação</string>
    <string name="Rendimento_total_de">Rendimento total de</string>
    <string name="Valor_Aplicado_Inicialmente">Valor Aplicado Inicialmente</string>
    <string name="Valor_Bruto_do_investimento">Valor Bruto do investimento</string>
    <string name="Valor_do_rendimento">Valor do rendimento</string>
    <string name="IR_sobre_o_investimento">IR sobre o investimento</string>
    <string name="Valor_líquido_do_investimento">Valor líquido do investimento</string>
    <string name="Data_Resate">Data de Resgate</string>
    <string name="Dias_corridos">Dias corridos</string>
    <string name="Rendimento_Mensal">Rendimento mensal</string>
    <string name="Percentual_do_cdi_investimento">Percentual do CDI do investimento</string>
    <string name="Rentabilidade_Anual">Rentabilidade Anual </string>
    <string name="Rentabilidade_no_período">Rentabilidade no período </string>
    <string name="Simular_novamente">Simular novamente</string>

    --- Strings InvestmentActivity ---
    <string name="Valor_a_ser_aplicado">Valor a ser aplicado</string>
    <string name="Qual_percentual_cdi">Qual Percentual de CDI</string>
    <string name="Qual_data_Encerramento">Qual a data de encerramento do investimento</string>
    <string name="botao_simular">Simular</string>
    <string name="exemplo_cdi">Exemplo: 100</string>
    <string name="exemplo_data">Exemplo: 2021-08-02</string>
    <string name="exemplo_valorInserido">Exemplo: 1089.50</string>
    <string name="ResultadoEstatico">R$ 1.088,69</string>
</resources>