<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.InvestimentActivity">

    <TextView
        android:id="@+id/textDiasCorridosResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textRendimentoMensalResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textRendimentoMensalResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textCDIResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textCDIResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textRentabilidadeAnualResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textRentabilidadeAnualResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textRentabilidadePeriodoResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textRentabilidadePeriodoResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSimularNovamente"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <Button
        android:id="@+id/buttonSimularNovamente"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Simular_novamente"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSimulationResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Resultado_Da_simulação"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textFinalResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFinalResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/ResultadoEstatico" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="44dp"
        android:text="@string/Rendimento_total_de"
        app:layout_constraintBottom_toTopOf="@+id/textValorAplicado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textValorAplicado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="Valor aplicado inicialmente"
        app:layout_constraintBottom_toTopOf="@+id/textValorBruto"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textValorBruto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Valor_Bruto_do_investimento"
        app:layout_constraintBottom_toTopOf="@+id/textValorRendimento"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textValorRendimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Valor_do_rendimento"
        app:layout_constraintBottom_toTopOf="@+id/textIR"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textIR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/IR_sobre_o_investimento"
        app:layout_constraintBottom_toTopOf="@+id/textValorLiquido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textValorLiquido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="46dp"
        android:text="@string/Valor_líquido_do_investimento"
        app:layout_constraintBottom_toTopOf="@+id/textDataDeResgate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textDataDeResgate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Data_Resate"
        app:layout_constraintBottom_toTopOf="@+id/textDiasCorridos"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textDiasCorridos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Dias_corridos"
        app:layout_constraintBottom_toTopOf="@+id/textRendimentoMensal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textRendimentoMensal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Rendimento_Mensal"
        app:layout_constraintBottom_toTopOf="@+id/textCDI"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textCDI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Percentual_do_cdi_investimento"
        app:layout_constraintBottom_toTopOf="@+id/textRentabilidadeAnual"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textRentabilidadeAnual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Rentabilidade_Anual"
        app:layout_constraintBottom_toTopOf="@+id/textRentabilidadePeriodo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textRentabilidadePeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Rentabilidade_no_período"
        app:layout_constraintBottom_toTopOf="@+id/buttonSimularNovamente"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textValorAplicadoResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textValorBrutoResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textValorBrutoResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textValorRendimentoResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textValorRendimentoResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textIRresultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textIRresultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textValorLiquidoResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textValorLiquidoResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toTopOf="@+id/textDataDeResgateResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textDataDeResgateResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textDiasCorridosResultado"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/textLucroLiquido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/BlueGreen"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textFinalResult"
        tools:text="TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>